cmake_minimum_required(VERSION 3.10)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)

project(ecs)
add_library(${PROJECT_NAME} SHARED)
file(GLOB SRC ./src/*)
target_sources(${PROJECT_NAME} PUBLIC ${SRC})

file(GLOB EXAMPLES ./examples/*)
foreach(EXAMPLE ${EXAMPLES})
	if(IS_DIRECTORY ${EXAMPLE})
		add_subdirectory(${EXAMPLE})
	endif()
endforeach()
