cmake_minimum_required(VERSION 3.10)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)

include_directories(include)
file(GLOB EXAMPLES ./examples/*)
foreach(EXAMPLE ${EXAMPLES})
	if(IS_DIRECTORY ${EXAMPLE})
		add_subdirectory(${EXAMPLE})
	endif()
endforeach()
